# LLM

LLM/: Embedding.py  Invoke_LLM.py  LocalRun.py  RAG.ipynb  demo_vector_search.py  main.py  new.py  prompts.py  pyproject.toml  requirements.txt
LLM/chroma_db/: chroma.sqlite3
